CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0 FATAL_ERROR)
SET(PROJECTNAME PluginMeshDataExchange)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DMESHDATAEXCHANGEPLUGIN_API")
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_INCLUDE)
	SET(FASTCAE_VTK_INCLUDE "FASTCAE_VTK_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_VTK_INCLUDE")		
ENDIF()
IF(NOT DEFINED FASTCAE_CGNS_INCLUDE)
	SET(FASTCAE_CGNS_INCLUDE "FASTCAE_CGNS_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_CGNS_INCLUDE")		
ENDIF()
IF(Qt5_DIR STREQUAL "Qt5_DIR-NOTFOUND")		
	MESSAGE(SEND_ERROR "Qt5_DIR is null, please specified Qt5Config.cmake location!~")
ENDIF()
IF(FASTCAE_VTK_INCLUDE STREQUAL "FASTCAE_VTK_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_VTK_INCLUDE is null, please specified VTK include directory!~")
ENDIF()
IF(FASTCAE_CGNS_INCLUDE STREQUAL "FASTCAE_CGNS_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_CGNS_INCLUDE is null, please specified CGNS include directory!~")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	IF(NOT DEFINED FASTCAE_VTK_SO_DIR)
		SET(FASTCAE_VTK_SO_DIR "FASTCAE_VTK_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_SO_DIR")			
	ENDIF()	
	IF(NOT DEFINED FASTCAE_CGNS_SO_DIR)
		SET(FASTCAE_CGNS_SO_DIR "FASTCAE_CGNS_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_SO_DIR")			
	ENDIF()
	
	IF(FASTCAE_VTK_SO_DIR STREQUAL "FASTCAE_VTK_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_SO_DIR is null, please specified VTK so directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_SO_DIR STREQUAL "FASTCAE_CGNS_SO_DIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_CGNS_SO_DIR is null, please specified CGNS so directory!~")
	ENDIF()
	FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)		
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	IF(NOT DEFINED FASTCAE_VTK_LIBDIR)
		SET(FASTCAE_VTK_LIBDIR "FASTCAE_VTK_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_LIBDDIR)
		SET(FASTCAE_VTK_LIBDDIR "FASTCAE_VTK_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_BINDIR)
		SET(FASTCAE_VTK_BINDIR "FASTCAE_VTK_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_BINDDIR)
		SET(FASTCAE_VTK_BINDDIR "FASTCAE_VTK_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_LIBDIR)
		SET(FASTCAE_CGNS_LIBDIR "FASTCAE_CGNS_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_LIBDDIR)
		SET(FASTCAE_CGNS_LIBDDIR "FASTCAE_CGNS_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_BINDIR)
		SET(FASTCAE_CGNS_BINDIR "FASTCAE_CGNS_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDIR")			
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_BINDDIR)
		SET(FASTCAE_CGNS_BINDDIR "FASTCAE_CGNS_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDDIR")			
	ENDIF()
	
	IF(FASTCAE_VTK_LIBDIR STREQUAL "FASTCAE_VTK_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDIR is null, please specified VTK lib directory!~")
	ENDIF()
	IF(FASTCAE_VTK_LIBDDIR STREQUAL "FASTCAE_VTK_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDDIR is null, please specified VTK libd directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDIR STREQUAL "FASTCAE_VTK_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDIR is null, please specified VTK bin directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDDIR STREQUAL "FASTCAE_VTK_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDDIR is null, please specified VTK bind directory!~")
	ENDIF()	
	IF(FASTCAE_CGNS_LIBDIR STREQUAL "FASTCAE_CGNS_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_LIBDIR is null, please specified CGNS lib directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_LIBDDIR STREQUAL "FASTCAE_CGNS_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_LIBDDIR is null, please specified CGNS libd directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_BINDIR STREQUAL "FASTCAE_CGNS_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_BINDIR is null, please specified CGNS bin directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_BINDDIR STREQUAL "FASTCAE_CGNS_BINDDIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_CGNS_BINDDIR is null, please specified CGNS bind directory!~")
	ENDIF()
	FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d/plugins ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d/plugins)    
	SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins) 
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin_d/plugins)   
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../output/bin/plugins)		
ENDIF()

FILE(GLOB SRC_H_FILES "*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp")
INCLUDE_DIRECTORIES(${FASTCAE_VTK_INCLUDE}
					${FASTCAE_CGNS_INCLUDE}
					${CMAKE_CURRENT_SOURCE_DIR}/..)

FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Xml PrintSupport REQUIRED)
ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_H_FILES} ${SRC_CPP_FILES})
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Xml Qt5::PrintSupport)										
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	IF(NOT DEFINED FASTCAE_VTK_SOS_0)
		FILE(GLOB FASTCAE_VTK_SOS_0 "${FASTCAE_VTK_SO_DIR}/*.so")
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_SOS_0)		
		FILE(GLOB FASTCAE_CGNS_SOS_0 "${FASTCAE_CGNS_SO_DIR}/*.so")
	ENDIF()
	
	FOREACH(FASTCAE_VTK_SO_0 ${FASTCAE_VTK_SOS_0})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_VTK_SO_0})
	ENDFOREACH()
	FOREACH(FASTCAE_CGNS_SO_0 ${FASTCAE_CGNS_SOS_0})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_CGNS_SO_0})
	ENDFOREACH()		
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMainWindow${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMainWindow${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSelfDefObject${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSelfDefObject${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libDataProperty${CMAKE_DEBUG_POSTFIX}.so"    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libDataProperty${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometry${CMAKE_DEBUG_POSTFIX}.so"    	optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometry${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometryWidgets${CMAKE_DEBUG_POSTFIX}.so" optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometryWidgets${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libGeometryCommand${CMAKE_DEBUG_POSTFIX}.so" optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libGeometryCommand${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libModuleBase${CMAKE_DEBUG_POSTFIX}.so"   	optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libModuleBase${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libModelData${CMAKE_DEBUG_POSTFIX}.so"	    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libModelData${CMAKE_RELEASE_POSTFIX}.so"				 
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMainWidgets${CMAKE_DEBUG_POSTFIX}.so"     optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMainWidgets${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libPythonModule${CMAKE_DEBUG_POSTFIX}.so"    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libPythonModule${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libPluginManager${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libPluginManager${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMeshData${CMAKE_DEBUG_POSTFIX}.so"   	    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMeshData${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libIO${CMAKE_DEBUG_POSTFIX}.so"     		    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libIO${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libBCBase${CMAKE_DEBUG_POSTFIX}.so" 		    optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libBCBase${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMaterial${CMAKE_DEBUG_POSTFIX}.so" 		optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMaterial${CMAKE_RELEASE_POSTFIX}.so"
										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libConfigOptions${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libConfigOptions${CMAKE_RELEASE_POSTFIX}.so")										 
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
	IF(NOT DEFINED FASTCAE_VTK_LIBDS)
		FILE(GLOB FASTCAE_VTK_LIBDS "${FASTCAE_VTK_LIBDDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_VTK_LIBS)
		FILE(GLOB FASTCAE_VTK_LIBS "${FASTCAE_VTK_LIBDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_LIBDS)
		FILE(GLOB FASTCAE_CGNS_LIBDS "${FASTCAE_CGNS_LIBDDIR}/*.lib")
	ENDIF()
	IF(NOT DEFINED FASTCAE_CGNS_LIBS)
		FILE(GLOB FASTCAE_CGNS_LIBS "${FASTCAE_CGNS_LIBDIR}/*.lib")
	ENDIF()

	FOREACH(FASTCAE_VTK_LIBD ${FASTCAE_VTK_LIBDS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_VTK_LIBD})
	ENDFOREACH()	
	FOREACH(FASTCAE_VTK_LIB ${FASTCAE_VTK_LIBS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_VTK_LIB})
	ENDFOREACH()	
	FOREACH(FASTCAE_CGNS_LIBD ${FASTCAE_CGNS_LIBDS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_CGNS_LIBD})
	ENDFOREACH()	
	FOREACH(FASTCAE_CGNS_LIB ${FASTCAE_CGNS_LIBS})
		TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_CGNS_LIB})
	ENDFOREACH()	
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MainWindow${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MainWindow${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../SelfDefObject${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../SelfDefObject${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../DataProperty${CMAKE_DEBUG_POSTFIX}.lib"    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../DataProperty${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../Geometry${CMAKE_DEBUG_POSTFIX}.lib"    	  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../Geometry${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../GeometryWidgets${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../GeometryWidgets${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../GeometryCommand${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../GeometryCommand${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ModuleBase${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ModuleBase${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ModelData${CMAKE_DEBUG_POSTFIX}.lib"	   	  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ModelData${CMAKE_RELEASE_POSTFIX}.lib"				 
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MainWidgets${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MainWidgets${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../PythonModule${CMAKE_DEBUG_POSTFIX}.lib"    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../PythonModule${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../PluginManager${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../PluginManager${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../MeshData${CMAKE_DEBUG_POSTFIX}.lib"   	  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../MeshData${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../IO${CMAKE_DEBUG_POSTFIX}.lib"     		  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../IO${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../BCBase${CMAKE_DEBUG_POSTFIX}.lib" 		  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../BCBase${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../Material${CMAKE_DEBUG_POSTFIX}.lib" 	   	  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../Material${CMAKE_RELEASE_POSTFIX}.lib"
										 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/../ConfigOptions${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/../ConfigOptions${CMAKE_RELEASE_POSTFIX}.lib")											 								
ENDIF()	

IF(TARGET SolutionDataIO)
	ADD_DEPENDENCIES(${PROJECTNAME} MainWindow SelfDefObject DataProperty Geometry GeometryWidgets GeometryCommand ModuleBase ModelData MainWidgets PythonModule PluginManager MeshData IO BCBase Material ConfigOptions)
ENDIF()										