CMAKE_MINIMUM_REQUIRED(VERSION 3.18.1 FATAL_ERROR)
SET(PROJECTNAME SolverControl)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DSOLVERCONTROL_API")

#Qt
IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
	MESSAGE(FATAL_ERROR "Qt5_DIR is null, please find Qt5_config.cmake file position!~")
ENDIF()

#FILE(GLOB SolverControl_TS_FILE "${TOP_PROJECT_SOURCE_DIR}/qrc/translations/SolverControl_Zh_CN.ts")
FILE(GLOB SRC_UI_FILES "*.ui")
FILE(GLOB SRC_H_FILES "*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp")

#SET_SOURCE_FILES_PROPERTIES(${SolverControl_TS_FILE} PROPERTIES OUTPUT_LOCATION "${TOP_PROJECT_SOURCE_DIR}/qrc/translations")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)    
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)   
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 

INCLUDE_DIRECTORIES(${TOP_PROJECT_SOURCE_DIR})

#FIND_PACKAGE(Qt5 COMPONENTS Widgets Core Gui LinguistTools REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Widgets Core Gui REQUIRED)
#QT5_CREATE_TRANSLATION(SolverControl_QM_FILE ${PROJECT_SOURCE_DIR} ${SolverControl_TS_FILE} OPTIONS -noobsolete)
QT5_ADD_RESOURCES(QF_Generated_QRC_FILE ${QF_QRC_FILE})
QT5_WRAP_UI(SRC_Generated_UI_FILES ${SRC_UI_FILES})
SET(CMAKE_AUTOMOC ON)

#SOURCE_GROUP("Translation" FILES ${SolverControl_QM_FILE} ${SolverControl_TS_FILE})
SOURCE_GROUP("rc" FILES ${QF_Generated_QRC_FILE} ${QF_QRC_FILE})
SOURCE_GROUP("Ui" FILES ${SRC_Generated_UI_FILES} ${SRC_UI_FILES})
SOURCE_GROUP("Generated Files" FILES "${TOP_PROJECT_BINARY_DIR}/${PROJECTNAME}/${PROJECTNAME}_autogen/mocs_compilation.cpp")

ADD_LIBRARY(${PROJECTNAME} SHARED  #${SolverControl_TS_FILE}
								   #${SolverControl_QM_FILE}
								   ${QF_Generated_QRC_FILE}
								   ${SRC_Generated_UI_FILES}								   
								   ${SRC_H_FILES}
								   ${SRC_CPP_FILES})
								   
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::Widgets Qt5::Core Qt5::Gui)
TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Settings${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Settings${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/PythonModule${CMAKE_DEBUG_POSTFIX}.lib"  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/PythonModule${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/DataProperty${CMAKE_DEBUG_POSTFIX}.lib"  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/DataProperty${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/SelfDefObject${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/SelfDefObject${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ConfigOptions${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ConfigOptions${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ModelData${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ModelData${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ModuleBase${CMAKE_DEBUG_POSTFIX}.lib"    optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ModuleBase${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/PostWidgets${CMAKE_DEBUG_POSTFIX}.lib"   optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/PostWidgets${CMAKE_RELEASE_POSTFIX}.lib"
								     debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/IO${CMAKE_DEBUG_POSTFIX}.lib"            optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/IO${CMAKE_RELEASE_POSTFIX}.lib")
ADD_DEPENDENCIES(${PROJECTNAME} IO)